crates/test-harness/fixtures/test262-lite/pass/arithmetic.js
/*---
description: arithmetic smoke
---*/
1 + 2 * 3;
