crates/test-harness/fixtures/test262-lite/fail/runtime/uncaught-throw.js
/*---
description: uncaught throw should be runtime error
negative:
  phase: runtime
  type: Error
---*/
throw 1;
